
public static class EnemyString
{
    public static class CucumberString
    {
        // Animation parameters
        public const string IS_ATTACKING = "IsAttacking";
        public const string IS_BEING_HIT = "IsBeingHit";
        public const string DEAD_HIT = "DeadHit";
        public const string DEAD_GROUND = "DeadGround";
    }

    public static class EnemyParticleTrigger
    {
        public const string BEGIN_CHASE = "BeginChase";
        public const string END_CHASE = "EndChase";
    }
}